--- a/gb/21/5/3/n12921412.md
+++ b/gb/21/5/3/n12921412.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ibqqdx3304/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ibqqdx3304/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ibqqdx3304/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ibqqdx3304/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ibqqdx3304/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【名家专栏】选择福奇是对抗疫情的下下策</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921471-dr-anthony-fauci-2-700x420-600x400.jpg" />
 <h6>美国国家过敏与传染病研究院（the National Institute of Allergy and Infectious Diseases）院长安东尼·福奇（Anthony Fauci）博士于2021年4月13日在华盛顿白宫对记者发言。(Brendan Smialowski/AFP via Getty Images)
@@ -16,12 +16,12 @@
 <p>尽管此时最著名的中国病毒学家——因多次造访蝙蝠洞并发现病毒样本、绰号“蝙蝠女”的石正丽教授，依然否认美国上个月对中共军队参与该实验室的指控。</p>
 <p>但有趣的是，石正丽是刚才提到的全国性计划，其中五个团队的负责人之一……曹务春上校也是。</p>
 <p>一定是某个地方搞错了，是吗？不然这就是一个大谎言。</p>
-<p>那么，<ahref="https://github.com/ibqqdx3304/djy/blob/master/gb/tag/%E7%A6%8F%E5%A5%87.md#1">福奇</a>（Anthony Fauci）博士到底在这当中扮演什么角色？他是我们联邦政府中最高薪的雇员，但他比起50年代情境喜剧中刻意扮演的愚妇角色，更显得三心二意？</p>
+<p>那么，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A6%8F%E5%A5%87.md#1">福奇</a>（Anthony Fauci）博士到底在这当中扮演什么角色？他是我们联邦政府中最高薪的雇员，但他比起50年代情境喜剧中刻意扮演的愚妇角色，更显得三心二意？</p>
 <p>答案可能就在于所谓的“基因功能获得”（gain of function）研究。你可能不清楚这个名词，而它其实就是生物学术语，或是以一种委婉的说法做解释，它可用于改变动物病毒，导致人类感染。</p>
 <p>你可以把它称作是魔鬼的工作，这也是如果还在世的纳粹门格勒医生（Dr. Mengele）很可能会做的事。</p>
 <p>这项研究中的某些用途是用作防御的，但在其它方面，不可避免地仍是作为攻击之用。嗯，如果要选择一种方式死亡，试问你宁可死于核弹？还是一种透过精心设计且冲击全球、永不消失的生物武器？我会选择核弹，因为至少是瞬间消失的。</p>
 <p>“基因功能获得”实验的进行，（尽管现在像是噩梦般的）相较台面上已知道的国家，其实存在于更多的国家当中。但值得庆幸的是，美国在2014年已禁止国内进行该实验。</p>
-<p><ahref="https://github.com/ibqqdx3304/djy/blob/master/gb/tag/%E7%A6%8F%E5%A5%87.md#1">福奇</a>博士对禁行该实验，一定感到非常不满。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A6%8F%E5%A5%87.md#1">福奇</a>博士对禁行该实验，一定感到非常不满。</p>
 <p>福奇成为主流媒体的偶像，就像前总统夫人杰奎琳·肯尼迪（Jacqueline Kennedy）一样，几乎出现在所有杂志的封面上。他用纳税人的钱去支持武汉实验室，无论意图为何，这项研究仍持续在进行中。</p>
 <p>具体细节尚不清楚，但结果却是相当明确。</p>
 <p>同样不确定的还有，福奇到底对中共军方参与武汉实验室的了解程度有多少。如果挖找事实内幕，那一定很有趣。并且曹上校也参与其中，且多年来实验室的活动是如此显&#33879;，不管福奇选择承认与否，实在很难想像，频繁造访的他，不会对实情有些了解。</p>
@@ -34,47 +34,47 @@
 <p><em>作者简介：</em></p>
 <p><em>罗杰?西蒙（Roger L. Simon）是一位获奖小说家、奥斯卡提名编剧，也是PJ媒体 （PJMedia）的联合创办人。现在是《大纪元时报》的特约编辑。他最新的著作是《网球界最伟大的球员》（The GOAT，注：GOAT是Greatest of All Time的缩写）（小说），以及《我最了解：道德自恋如何摧毁我们的共和国，如果它还未被摧毁的话》（I Know Best: How Moral Narcissism Is Destroying Our Republic, If It Hasn&#8217;t Already）（非小说）。在Parler平台上搜寻@rogerlsimon可以找到作者。</em></p>
 <p><em>本文仅代表作者个人观点，不一定反映《大纪元时报》的立场。</em></p>
-<p>责任编辑：高静#</p>
+<p>责任编辑：高静#◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921680.md#1">香港法轮佛学会就《大公报》污蔑文章的声明</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921166.md#1">陈思敏：北京西站五一大瘫痪说明什么</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920992.md#1">李国涛：不屈不挠 继往开来——法轮功与未来中国</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920408.md#1">田云：谴责中共打压香港法轮功 呼唤正义良知</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679833.md#1">【名家专栏】击败中共 美须专注五大领域</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679346.md#1">郝平：中共政治局向空难逝者默哀的背后</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678858.md#1">【名家专栏】我是如何战胜通货膨胀的</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678330.md#1">陈思敏：“铁老虎”盛光祖仕途牵出韩杼滨张德江</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/15/n10145540.md#1" target="_blank">关敏：不许鼓吹“蒋经国时代”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869318.md#1" target="_blank">这些前中共军官对李洪志大师的感恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/16/n10979206.md#1" target="_blank">共产暴政录：“五一六”反革命阴谋集团案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232059.md#1" target="_blank">大陆移民旧金山推崇法轮功：真善忍好</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12914467.md#1">【未解之谜】车祸丧生 两姐妹转生再“回家”</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/26/n12905817.md#1">仙女被贬入凡尘 拒婚事潜心修道显神迹</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12910639.md#1">轮回转生来还债 一分不多给 一分不少还</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/26/n12906271.md#1">麦克阿瑟的巅峰之战──仁川登陆战</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/23/n12900882.md#1">美好的缘分 生命的奇迹</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/2/n12854663.md#1">【横河观点】印突变病毒引忧 美国需协防台湾</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/3/22/n12828412.md#1">【思想领袖】帕斯卡：如何反击中共全面挑衅</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920471.md#1">【拍案惊奇】防务漏洞？陆男乘皮艇一路进台湾</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12917234.md#1">加州近20%电动车主为何想重开汽油车</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12915806.md#1">法轮功排字贺师尊华诞 天上七彩日晕辉映</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12915721.md#1">不满与恐惧 红二代与习近平裂痕加深</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12917110.md#1">香港移居台湾人数创新高 杜汶泽脸书发感恩文</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919696.md#1">又被中共官方点名 范冰冰发文回应引热议</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12917275.md#1">冯小刚对赌再败合赔2亿 “华谊兄弟”连亏3年</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12918920.md#1">陈昇突袭台北闹区走唱 线上观看人次创新高</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12919023.md#1">瑞莎“不放弃”培训选手 宣布国际赛惊人成绩</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12913778.md#1">不吃早餐肾虚、伤胃 养胃早餐和进食时间大公开</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/27/n12909431.md#1">孩子容易流鼻血 有4大原因！1招快速止血</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/2/n12918986.md#1">世界最重芒果在哥伦比亚诞生 重达4公斤多</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12914543.md#1">马铃薯上榜？5种养胃食物这样吃 改善胃溃疡防胃癌</a></li>
-<li><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12920672.md#1">目击30公分高外星人走出UFO 玻国居民惊呆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ibqqdx3304/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ibqqdx3304/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/3/n12921412.htm">【名家专栏】选择福奇是对抗疫情的下下策</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/3/n12921412.htm">【名家专栏】选择福奇是对抗疫情的下下策</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/3/n12921412.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ibqqdx3304/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ibqqdx3304/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ibqqdx3304/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/5/3/n12921412.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
